fix: routes & userRoom scrollbars

--- a/client/src/pages/UserRoom/UserRoom.scss
+++ b/client/src/pages/UserRoom/UserRoom.scss
@@ -2,7 +2,6 @@
 
 .user-room-wrapper {
   width: 100%;
-  height: calc(100vh - #{($header-height + px)} - #{($footer-height + px)});
   @include flex-all-center;
   @include user-select-none;
   flex-direction: column;
